deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: train-classifier-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
spec:
  rules:
  - http:
      paths:
      - path: /train.Train
        backend:
          serviceName: train-classifier-svc
          servicePort: grpc
      - path: /train.Classify
        backend:
          serviceName: train-classifier-svc
          servicePort: grpc

---

apiVersion: v1
kind: Service
metadata:  
  name: train-classifier-svc
spec:
  selector:    
    app: train-classifier
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 443
    targetPort: 9000
    protocol: TCP
    name: grpc
  type: LoadBalancer  

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: train-classifier
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: train-classifier
    spec:
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port=8080",
          "--http2_port=9000",
          "--backend=grpc://127.0.0.1:50051",
          "--service=train.classifier.grpc.endpoints.beta-cli-aa360.cloud.goog",
          "--rollout_strategy=managed",
        ]
        ports:
          - containerPort: 8080
          - containerPort: 9000
      - name: node-train-classifier
        image: gcr.io/beta-cli-aa360/textclassifier:1.0.{.version}
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 50051
